syntax = "proto3";

service Config {
    rpc CreateApp (App) returns (App) {}
    rpc DeleteApp (App) returns (Response) {}
    rpc ListApps (Request) returns (Apps) {}

    rpc CreateCluster (Cluster) returns (Cluster) {}
    rpc DeleteCluster (Cluster) returns (Response) {}
    rpc ListClusters (App) returns (Clusters) {}

    rpc CreateNamespace (Namespace) returns (Namespace) {}
    rpc DeleteNamespace(Namespace) returns (Response) {}
    rpc ListNamespaces(Cluster)returns (Namespaces){}

    rpc UpdateConfig (ConfigValue) returns (Response) {}
}

message App {
    int64 id = 1;
    int64 createdAt = 2;
    int64 updatedAt = 3;

    string appName = 4;
    string description = 5;
}

message Apps {
    repeated App apps = 1;
}

message Cluster {
    int64 id = 1;
    int64 createdAt = 2;
    int64 updatedAt = 3;

    string appName = 4;
    string clusterName = 5;
    string description = 6;
}

message Clusters {
    repeated Cluster clusters = 1;
}

message Namespace {
    int64 id = 1;
    int64 createdAt = 2;
    int64 updatedAt = 3;

    string appName = 4;
    string clusterName = 5;
    string namespaceName = 6;
    string description = 7;
}

message Namespaces {
    repeated Namespace namespaces = 1;
}

message ConfigValue {
    Namespace namespace = 1;
    string value = 2;
}

message Request {
}

message Response {
}
